Corregí links css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Positioning 1</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/nav.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/header.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/videos.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/nav/nav.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/header/header.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/videos/videos.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/footer/footer.css">
 
   </head>
   <body>
