--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 
   </head>
   <body>
-
+    <nav>
+      <ul>
+        <li class="navLista"><img src="assets/img/logo-pink.png" class="logoNav" width="64px"></li>
+        <li class="navLista">Drive</li>
+        <li class="navLista">Explore^</li>
+        <li class="navLista">Help</li>
+        <li class="navLista">Log in</li>
+        <li class="navLista">Sign up</li>
+      </ul>
+    </nav>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
