Agregando la ruta de las imagenes

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
           </p>
         </div>
         <div class="contenedorImagenesVideos">
-          <img class="imagenVideos">
+          <img class="imagenVideos" src="assets/img/imgVideos1.png">
           <!-- imgagen -->
         </div>
       </section>
 
       <section>
         <div class="contenedorImagenesVideos">
-          <img class="imagenVideos">
+          <img class="imagenVideos" src="assets/img/imgVideos2.png">
           <!-- imgagen -->
         </div>
         <div class="contenedorTextoVideos">
@@ -50,7 +50,7 @@
           </p>
         </div>
         <div class="contenedorImagenesVideos">
-          <img class="imagenVideos">
+          <img class="imagenVideos" src="assets/img/imgVideos3.png">
           <!-- imgagen -->
         </div>
       </section>
