Establecí tamaños generales de seccion videos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Positioning 1</title>
+    <title>Lyft</title>
     <link rel="stylesheet" type="text/css" href="assets/css/nav/nav.css">
     <link rel="stylesheet" type="text/css" href="assets/css/header/header.css">
     <link rel="stylesheet" type="text/css" href="assets/css/videos/videos.css">
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-    <nav>
+    <!-- <nav>
       <ul>
         <li class="navLista"><img src="assets/img/logo-pink.png" class="logoNav" width="64px"></li>
         <li class="navLista">Drive</li>
@@ -19,10 +19,10 @@
         <li class="navLista">Log in</li>
         <li class="navLista">Sign up</li>
       </ul>
-    </nav>
-    
+    </nav> -->
+
     <section id="video">
-      <section>
+      <section class="contenedorTextoImagenVideos">
         <div class="contenedorTextoVideos">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">AMPLIFY YOUR RIDE</h2>
@@ -37,11 +37,11 @@
         </div>
       </section>
 
-      <section>
+      <!-- <section>
         <div class="contenedorImagenesVideos">
-          <img class="imagenVideos" src="assets/img/imgVideos2.png">
+          <img class="imagenVideos" src="assets/img/imgVideos2.png"> -->
           <!-- imgagen -->
-        </div>
+        <!-- </div>
         <div class="contenedorTextoVideos">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">JUNE</h2>
@@ -50,9 +50,9 @@
              sharing the ride — and sharing her life, too.
           </p>
         </div>
-      </section>
+      </section> -->
 
-      <section>
+      <!-- <section>
         <div class="contenedorTextoVideos">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">A GOOD THING GOING</h2>
@@ -61,10 +61,10 @@
           </p>
         </div>
         <div class="contenedorImagenesVideos">
-          <img class="imagenVideos" src="assets/img/imgVideos3.png">
+          <img class="imagenVideos" src="assets/img/imgVideos3.png"> -->
           <!-- imgagen -->
-        </div>
-      </section>
+        <!-- </div>
+      </section> -->
 
     </section>
 
