--- a/index.html
+++ b/index.html
@@ -3,14 +3,69 @@
   <head>
     <meta charset="utf-8">
     <title>Positioning 1</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/nav.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/header.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/videos.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/nav/nav.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/header/header.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/videos/videos.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/footer/footer.css">
 
   </head>
   <body>
 
+    <footer id="footerEnding">
+      <div class="listaNum1">
+        <ul class="list1">
+            <li class="classList"><a> DRIVE</a></li>
+            <li class="classList"><a> RIDE</a></li>
+            <li class="classList"><a> LOG IN</a></li>
+            <li class="classList"><a> Help</a></li>
+            <li class="classList"><a> Cities</a></li>
+            <li class="classList"><a> Airports</a></li>
+            <li class="classList"><a> Fare Estimate</a></li>
+            <li class="classList"><a> Free Ride Credits</a></li>
+            <li class="classList"><a> Driver Promo</a></li>
+            <li class="classList"><a> Gift Cards</a></li>
+        </ul>
+      </div>
+      <div class="listaNum2">
+        <ul class="list2">
+            <li class="classList2"><a> PARTNER</a></li>
+            <li class="classList2"><a> Partnerships</a></li>
+            <li class="classList2"><a> Business</a></li>
+            <li class="classList2"><a> Ambassadors</a></li>
+            <li class="classList2"><a> Developers</a></li>
+            <li class="classList2"><a> Events</a></li>
+        </ul>
+      </div>
+      <div class="listaNum3">
+        <ul class="list3">
+            <li class="classList3"><a> LEARN</a></li>
+            <li class="classList3"><a> Safety</a></li>
+            <li class="classList3"><a> Blog</a></li>
+            <li class="classList3"><a> Press</a></li>
+            <li class="classList3"><a> Careers</a></li>
+            <li class="classList3"><a> Driver Requirements</a></li>
+        </ul>
+      </div>
+      <div class="listaNum4">
+        <ul class="list4">
+            <li class="classList4"><a><img src="assets/img/apple-store.svg"/></a></li>
+            <li class="classList4"><a> <img src="assets/img/google-play.png"/></a></li>
+            <li class="classList4"><a> <img src="assets/img/amazon.png"/></a></li>
+            <li class="classList4"><a> <img src="assets/img/microsoft.png"/></a></li>
+        </ul>
+      </div>
+      <div class="Icons">
+          <div class="icon1"><img src="assets/img/twitter.png"></div>
+          <div class="icon2"><img src="assets/img/facebook.png"></div>
+          <div class="icon3"><img src="assets/img/instagram.png"></div>
+          <div class="linea"></div>
+          <div class="lastPart">
+            <span class="classList5">© 2017 Lyft, Inc.</span>
+            <span class="classList5"><a> Terms</a></span>
+            <span class="classList5"><a> Privacy</a></span>
+          </div>
+      </div>
+    </footer>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
