Realicé commit para poder borrar thumbs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/header/header.css">
     <link rel="stylesheet" type="text/css" href="assets/css/videos/videos.css">
     <link rel="stylesheet" type="text/css" href="assets/css/footer/footer.css">
+    <link rel="icon" href="/favicon.ico">
+
 
   </head>
   <body>
