Dejé de comentar para hacer commit para poder borrar thumbs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-    <!-- <nav>
+    <nav>
       <ul>
         <li class="navLista"><img src="assets/img/logo-pink.png" class="logoNav" width="64px"></li>
         <li class="navLista">Drive</li>
@@ -21,7 +21,7 @@
         <li class="navLista">Log in</li>
         <li class="navLista">Sign up</li>
       </ul>
-    </nav> -->
+    </nav>
 
     <section id="video">
       <section class="contenedorTextoImagenVideos">
@@ -39,11 +39,11 @@
         </div>
       </section>
 
-      <!-- <section>
+      <section>
         <div class="contenedorImagenesVideos">
-          <img class="imagenVideos" src="assets/img/imgVideos2.png"> -->
+          <img class="imagenVideos" src="assets/img/imgVideos2.png">
           <!-- imgagen -->
-        <!-- </div>
+        </div>
         <div class="contenedorTextoVideos">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">JUNE</h2>
@@ -52,9 +52,9 @@
              sharing the ride — and sharing her life, too.
           </p>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section>
+      <section>
         <div class="contenedorTextoVideos">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">A GOOD THING GOING</h2>
@@ -65,8 +65,8 @@
         <div class="contenedorImagenesVideos">
           <img class="imagenVideos" src="assets/img/imgVideos3.png"> -->
           <!-- imgagen -->
-        <!-- </div>
-      </section> -->
+        </div>
+      </section>
 
     </section>
 
