Definí primero estilos de header

--- a/index.html
+++ b/index.html
@@ -7,61 +7,59 @@
     <link rel="stylesheet" type="text/css" href="assets/css/header/header.css">
     <link rel="stylesheet" type="text/css" href="assets/css/videos/videos.css">
     <link rel="stylesheet" type="text/css" href="assets/css/footer/footer.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <body>
-<<<<<<< HEAD
+
     <header id="header">
       <div>
-        <video src="assets/img/header-video.mp4" autoplay poster=""></video>
-        <div>
+
+        <video id="video-header" src="assets/img/header-video.mp4" autoplay poster=""></video>
+
+        <div class="formulario-header">
           <form>
-            <h1>TURN MILES<br>INTO MONEY</h1>
-            <h2>SING UP TO DRIVE WITH LYFT.</h2>
+            <h1 id="tituloForm">TURN MILES<br>INTO MONEY</h1>
+            <h2 id="tituloFormDos">SING UP TO DRIVE WITH LYFT.</h2>
             <input type="tel" name="phone" placeholder="Phone Number">
             <input type="text" name="nameFirst" placeholder="First Name">
             <input type="text" name="nameLast" placeholder="Last Name">
             <input type="mail" name="email" placeholder="Email">
             <input type="text" name="city" placeholder="City">
             <a href="#">Promo code?</a>
-            <div>
-              <input type="checkbox" name="agree">
-              <label>
-                <span>
-                  I agree
-                  <a href="#">Lyft´s Terms of Service</a>
-                </span>
-              </label>  
-            </div>
+            <input type="checkbox" name="agree">
+            <label>
+              <span>
+                I agree
+              <a href="#">Lyft´s Terms of Service</a>
+              </span>
+            </label>
             <button>Become a Driver</button>
             <a href="#">Sign Up to Ride</a>
-          </form>
-          <div>
             <p>Already applied?</p>
             <a href="#">Check the status of your application here</a>
             <p>Earn money for inviting friends to drive.</p>
             <a href="#">Learn more</a>
-          </div>
+          </form>
         </div>
-      </div>
+
+        </div>
+
     </header>
 
-    <div>
-      <div>
-        <div>
-          <h3>A RIDE IN<br>MINUTES</h3>
-          <p>Request a ride and you'll be on<br> you way in minutes.Request.<br>Ride.Repeat.</p>
-          <h3>SERIOUS ABOUT<br>SAFETY</h3>
-          <p>From knowing the color of your driver's car to our 24/7<br>Trust & Safety Team, we got you.</p>
-          <h3>HAPPY DRIVES.<br>HAPPY RIDERS.</h3>
-          <p>Ride with and you’ll see why 9 out of 10 rides end with five<br> stars.</p>
-        </div>
-        <div>
-          <img src="assets/img/phone.png">
-        </div>
+    <div class="seccionHeader">
+      <div class="parrafosHeader">
+        <h3>A RIDE IN<br>MINUTES</h3>
+        <p>Request a ride and you'll be on<br> you way in minutes.Request.<br>Ride.Repeat.</p>
+        <h3>SERIOUS ABOUT<br>SAFETY</h3>
+        <p>From knowing the color of your driver's car to our 24/7<br>Trust & Safety Team, we got you.</p>
+        <h3>HAPPY DRIVES.<br>HAPPY RIDERS.</h3>
+        <p>Ride with and you’ll see why 9 out of 10 rides end with five<br> stars.</p>
+      </div>
+      <div class="parrafosHeader">
+        <img id="imagenTelefono" src="assets/img/phone.png">
       </div>
     </div>
-=======
+
     <nav>
       <ul>
         <li class="navLista"><img src="assets/img/logo-pink.png" class="logoNav" width="64px"></li>
@@ -72,7 +70,7 @@
         <li class="navLista">Sign up</li>
       </ul>
     </nav>
-    
+
     <section id="video">
       <section>
         <div class="contenedorTextoVideos">
