--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   </head>
 
   <body>
-    <nav>
+    <nav id="nav">
       <ul>
         <li class="navLista">
           <a href="#"><img src="assets/img/logo-white.png" class="logoNav" width="64px"></a></li>
         <li class="navLista navFloat bordeElementoNav">Sign up</li>
         <li class="navLista navFloat bordeElementoNav">Log in</li>
         <li class="navLista navFloat">Help</li>
-        <li class="navLista navFloat">Explore^</li>
+        <li class="navLista navFloat">Explore ^</li>
         <li class="navLista navFloat">Drive</li>
       </ul>
     </nav>
 
     <header id="header">
       <div>
-        <video src="assets/img/header-video.mp4" autoplay poster=""></video>
+        <video src="assets/img/header-video.mp4" autoplay></video>
         <div>
           <form>
             <h1>TURN MILES<br>INTO MONEY</h1>
@@ -44,7 +44,7 @@
                   I agree
                   <a href="#">Lyft´s Terms of Service</a>
                 </span>
-              </label>  
+              </label>
             </div>
             <button>Become a Driver</button>
             <a href="#">Sign Up to Ride</a>
@@ -75,7 +75,7 @@
       </div>
     </div>
 
-   
+
     <section id="video">
       <section class="contenedorTextoImagenVideos">
         <div class="contenedorTextoVideos">
