Logré definir posicionamiento :) git add .

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Lyft</title>
+    <title>A ride whenever you need one - Lyft</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/nav/nav.css">
     <link rel="stylesheet" type="text/css" href="assets/css/header/header.css">
@@ -12,8 +12,8 @@
 
   </head>
   <body>
-  
-    <nav>
+
+    <!-- <nav>
       <ul>
         <li class="navLista"><img src="assets/img/logo-pink.png" class="logoNav" width="64px"></li>
         <li class="navLista">Drive</li>
@@ -24,7 +24,7 @@
       </ul>
     </nav>
 
-    
+
     <header id="header">
       <div>
         <video src="assets/img/header-video.mp4" autoplay poster=""></video>
@@ -45,7 +45,7 @@
                   I agree
                   <a href="#">Lyft´s Terms of Service</a>
                 </span>
-              </label>  
+              </label>
             </div>
             <button>Become a Driver</button>
             <a href="#">Sign Up to Ride</a>
@@ -58,8 +58,8 @@
           </div>
         </div>
       </div>
-    </header>
-
+    </header> -->
+<!--
     <div>
       <div>
         <div>
@@ -74,11 +74,11 @@
           <img src="assets/img/phone.png">
         </div>
       </div>
-    </div>
+    </div> -->
 
-   
-    <section id="video">
-      <section class="contenedorTextoImagenVideos">
+
+    <div id="video">
+      <div class="contenedorTextoImagenVideos">
         <div class="contenedorTextoVideos">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">AMPLIFY YOUR RIDE</h2>
@@ -87,17 +87,17 @@
              for passengers and drivers to find each other.
           </p>
         </div>
-        <div class="contenedorImagenesVideos">
+        <div class="contenedorImagenVideo">
           <img class="imagenVideos" src="assets/img/imgVideos1.png">
-          <!-- imgagen -->
+          <!-- imagen -->
         </div>
-      </section>
+      </div>
 
-      <section>
+      <!-- <section>
         <div class="contenedorImagenesVideos">
-          <img class="imagenVideos" src="assets/img/imgVideos2.png">
+          <img class="imagenVideos" src="assets/img/imgVideos2.png"> -->
           <!-- imgagen -->
-        </div>
+        <!-- </div>
         <div class="contenedorTextoVideos">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">JUNE</h2>
@@ -106,9 +106,9 @@
              sharing the ride — and sharing her life, too.
           </p>
         </div>
-      </section>
+      </section> -->
 
-      <section>
+      <!-- <section>
         <div class="contenedorTextoVideos">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">A GOOD THING GOING</h2>
@@ -119,12 +119,12 @@
         <div class="contenedorImagenesVideos">
           <img class="imagenVideos" src="assets/img/imgVideos3.png"> -->
           <!-- imgagen -->
-        </div>
-      </section>
+        <!-- </div>
+      </section> -->
 
-    </section>
+    </div>
 
-    <footer id="footerEnding">
+    <!-- <footer id="footerEnding">
       <div class="listaNum1">
         <ul class="list1">
             <li class="classList"><a> DRIVE</a></li>
@@ -178,7 +178,7 @@
             <span class="classList5"><a> Privacy</a></span>
           </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
