Terminé estilos con fondo para visualizar

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
         </div>
       </div>
 
-      <!-- <section>
-        <div class="contenedorImagenesVideos">
-          <img class="imagenVideos" src="assets/img/imgVideos2.png"> -->
+      <section>
+        <div class="contenedorImagenVideo contenedorImagenVideo2">
+          <img class="imagenVideos imagenVideos2" src="assets/img/imgVideos2.png">
           <!-- imgagen -->
-        <!-- </div>
-        <div class="contenedorTextoVideos">
+        </div>
+        <div class="contenedorTextoVideos contenedorTextoVideos2">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">JUNE</h2>
           <p class="pVideos">In an animated short film by Academy Award-winner John Kahrs,
@@ -106,9 +106,9 @@
              sharing the ride — and sharing her life, too.
           </p>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section>
+      <section class="romperFloat">
         <div class="contenedorTextoVideos">
           <h3 class="h3Videos">WATCH</h3>
           <h2 class="h2Videos">A GOOD THING GOING</h2>
@@ -116,11 +116,11 @@
              Lyft continues to prioritize happy drivers, short ETAs, and safety.
           </p>
         </div>
-        <div class="contenedorImagenesVideos">
-          <img class="imagenVideos" src="assets/img/imgVideos3.png"> -->
+        <div class="contenedorImagenVideo">
+          <img class="imagenVideos" src="assets/img/imgVideos3.png">
           <!-- imgagen -->
-        <!-- </div>
-      </section> -->
+        </div>
+      </section>
 
     </div>
 
