Terminé estilos, quité el background de cada sección y quité comentarios de las otras secciones

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <!-- <nav>
+    <nav>
       <ul>
         <li class="navLista"><img src="assets/img/logo-pink.png" class="logoNav" width="64px"></li>
         <li class="navLista">Drive</li>
@@ -58,8 +58,8 @@
           </div>
         </div>
       </div>
-    </header> -->
-<!--
+    </header>
+
     <div>
       <div>
         <div>
@@ -74,7 +74,7 @@
           <img src="assets/img/phone.png">
         </div>
       </div>
-    </div> -->
+    </div>
 
 
     <div id="video">
@@ -124,7 +124,7 @@
 
     </div>
 
-    <!-- <footer id="footerEnding">
+    <footer id="footerEnding">
       <div class="listaNum1">
         <ul class="list1">
             <li class="classList"><a> DRIVE</a></li>
@@ -178,7 +178,7 @@
             <span class="classList5"><a> Privacy</a></span>
           </div>
       </div>
-    </footer> -->
+    </footer>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
