modificaciones cambiar color de logo cuando se mueve el mouse

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <nav id="nav">
       <ul>
         <li class="navLista">
-          <a href="#"><img src="assets/img/logo-white.png" class="logoNav" width="64px"></a></li>
-        <li class="navLista navFloat bordeElementoNav">Sign up</li>
+          <a href="#"><img src="assets/img/logo-pink.png" class="logoNav" width="64px" id="imagenLogoCambio"></a></li>
+        <li class="navLista navFloat bordeElementoNav" id="sign">Sign up</li>
         <li class="navLista navFloat bordeElementoNav">Log in</li>
         <li class="navLista navFloat">Help</li>
         <li class="navLista navFloat">Explore ^</li>
@@ -27,6 +27,9 @@
       </ul>
     </nav>
 
+    <div id="pruebaNav">
+
+    </div>
 
     <header id="header">
       <div>
