Inserté ícono lyft

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/header/header.css">
     <link rel="stylesheet" type="text/css" href="assets/css/videos/videos.css">
     <link rel="stylesheet" type="text/css" href="assets/css/footer/footer.css">
-
+    <link rel="icon" href="assets/img/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
   </head>
