--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-  
+
     <nav>
       <ul>
         <li class="navLista"><img src="assets/img/logo-pink.png" class="logoNav" width="64px"></li>
@@ -24,7 +24,7 @@
       </ul>
     </nav>
 
-    
+
     <header id="header">
       <div>
         <video src="assets/img/header-video.mp4" autoplay poster=""></video>
@@ -45,7 +45,7 @@
                   I agree
                   <a href="#">Lyft´s Terms of Service</a>
                 </span>
-              </label>  
+              </label>
             </div>
             <button>Become a Driver</button>
             <a href="#">Sign Up to Ride</a>
@@ -76,7 +76,7 @@
       </div>
     </div>
 
-   
+
     <section id="video">
       <section class="contenedorTextoImagenVideos">
         <div class="contenedorTextoVideos">
@@ -121,62 +121,55 @@
           <!-- imgagen -->
         </div>
       </section>
-
     </section>
 
     <footer id="footerEnding">
-      <div class="listaNum1">
+      <div class="fondoFooter">
         <ul class="list1">
-            <li class="classList"><a> DRIVE</a></li>
-            <li class="classList"><a> RIDE</a></li>
-            <li class="classList"><a> LOG IN</a></li>
-            <li class="classList"><a> Help</a></li>
-            <li class="classList"><a> Cities</a></li>
-            <li class="classList"><a> Airports</a></li>
-            <li class="classList"><a> Fare Estimate</a></li>
-            <li class="classList"><a> Free Ride Credits</a></li>
-            <li class="classList"><a> Driver Promo</a></li>
-            <li class="classList"><a> Gift Cards</a></li>
+            <li class="uppercase"><a > <strong> DRIVE </strong></a></li>
+            <li class="uppercase"><a> <strong> RIDE </strong></a></li>
+            <li class="uppercase"><a> <strong> LOG IN </strong></a></li>
+            <li class="classList"><a class="link"> Help</a></li>
+            <li class="classList"><a class="link"> Cities</a></li>
+            <li class="classList"><a class="link"> Airports</a></li>
+            <li class="classList"><a class="link"> Fare Estimate</a></li>
+            <li class="classList"><a class="link"> Free Ride Credits</a></li>
+            <li class="classList"><a class="link"> Driver Promo</a></li>
+            <li class="classList"><a class="link"> Gift Cards</a></li>
         </ul>
-      </div>
-      <div class="listaNum2">
         <ul class="list2">
-            <li class="classList2"><a> PARTNER</a></li>
-            <li class="classList2"><a> Partnerships</a></li>
-            <li class="classList2"><a> Business</a></li>
-            <li class="classList2"><a> Ambassadors</a></li>
-            <li class="classList2"><a> Developers</a></li>
-            <li class="classList2"><a> Events</a></li>
+          <li class="uppercase"><a> <strong> PARTNER </strong></a></li>
+          <li class="classList2"><a class="link"> Partnerships</a></li>
+          <li class="classList2"><a class="link"> Business</a></li>
+          <li class="classList2"><a class="link"> Ambassadors</a></li>
+          <li class="classList2"><a class="link"> Developers</a></li>
+          <li class="classList2"><a class="link"> Events</a></li>
         </ul>
-      </div>
-      <div class="listaNum3">
         <ul class="list3">
-            <li class="classList3"><a> LEARN</a></li>
-            <li class="classList3"><a> Safety</a></li>
-            <li class="classList3"><a> Blog</a></li>
-            <li class="classList3"><a> Press</a></li>
-            <li class="classList3"><a> Careers</a></li>
-            <li class="classList3"><a> Driver Requirements</a></li>
-        </ul>
-      </div>
-      <div class="listaNum4">
-        <ul class="list4">
-            <li class="classList4"><a><img src="assets/img/apple-store.svg"/></a></li>
-            <li class="classList4"><a> <img src="assets/img/google-play.png"/></a></li>
-            <li class="classList4"><a> <img src="assets/img/amazon.png"/></a></li>
-            <li class="classList4"><a> <img src="assets/img/microsoft.png"/></a></li>
-        </ul>
-      </div>
-      <div class="Icons">
-          <div class="icon1"><img src="assets/img/twitter.png"></div>
-          <div class="icon2"><img src="assets/img/facebook.png"></div>
-          <div class="icon3"><img src="assets/img/instagram.png"></div>
+          <li class="uppercase"><a> <strong> LEARN </strong></a></li>
+          <li class="classList3"><a class="link"> Safety</a></li>
+          <li class="classList3"><a class="link"> Blog</a></li>
+          <li class="classList3"><a class="link"> Press</a></li>
+          <li class="classList3"><a class="link"> Careers</a></li>
+          <li class="classList3"><a class="link"> Driver Requirements</a></li>
+       </ul>
+       <ul class="list4">
+         <li class="classList4"><a> <img class="imagenApp"src="assets/img/apple-store.svg" /></a></li>
+         <li class="classList4"><a> <img class="imagenApp" src="assets/img/google-play.png"/></a></li>
+         <li class="classList4"><a> <img class="imagenApp" src="assets/img/amazon.png"/></a></li>
+         <li class="classList4"><a> <img class="imagenApp" src="assets/img/microsoft.png"/></a></li>
+       </ul>
+       <div class="Icons">
+          <div class="iconsV"><img src="assets/img/twitter.png"></div>
+          <div class="iconsV"><img src="assets/img/facebook.png"></div>
+          <div class="iconsV"><img src="assets/img/instagram.png"></div>
           <div class="linea"></div>
-          <div class="lastPart">
+
             <span class="classList5">© 2017 Lyft, Inc.</span>
-            <span class="classList5"><a> Terms</a></span>
-            <span class="classList5"><a> Privacy</a></span>
-          </div>
+            <span><a class="enlace1"> Terms</a></span>
+            <span><a class="enlace2"> Privacy</a></span>
+      </div>
+        </div>
       </div>
     </footer>
     <script src="assets/js/main.js"></script>
