--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
          <li class="classList4"><a> <img class="imagenApp" src="assets/img/microsoft.png"/></a></li>
        </ul>
        <div class="Icons">
-          <div class="iconsV"><img src="assets/img/twitter.png"></div>
-          <div class="iconsV"><img src="assets/img/facebook.png"></div>
-          <div class="iconsV"><img src="assets/img/instagram.png"></div>
+          <div ><img class="iconsV Uno" src="assets/img/twitter.png"></div>
+          <div ><img class="iconsV Dos"src="assets/img/facebook.png"></div>
+          <div ><img class="iconsV Tres"src="assets/img/instagram.png"></div>
           <div class="linea"></div>
 
             <span class="classList5">© 2017 Lyft, Inc.</span>
-            <span><a class="enlace1"> Terms</a></span>
+            <span><a class="enlace1"> Terms </a></span>
             <span><a class="enlace2"> Privacy</a></span>
       </div>
         </div>
