--- a/index.html
+++ b/index.html
@@ -128,8 +128,13 @@
           </p>
         </div>
         <div class="contenedorImagenVideo">
-          <img class="imagenVideos" src="assets/img/imgVideos3.png">
-          <!-- imgagen -->
+          <!-- <img id="myImageId" class="imagenVideos" src="assets/img/imgVideos3.png"> -->
+
+            <video width="720" height="400" >
+              <source hsrc="https://www.youtube.com/embed/XGSy3_Czz8k" type="video/webm">
+            </video>
+
+        <!-- imgagen -->
         </div>
       </section>
 
