--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <ul>
         <li class="navLista">
-          <a href="#"><img src="assets/img/logo-pink.png" class="logoNav" width="64px" id="imagenLogoCambio"></a></li>
+          <a href="#"><img src="assets/img/logo-white.png" class="logoNav" width="64px" id="imagenLogoCambio"></a></li>
         <li class="navLista navFloat bordeElementoNav" id="sign">Sign up</li>
         <li class="navLista navFloat bordeElementoNav">Log in</li>
         <li class="navLista navFloat">Help</li>
