Agregando el video y verificando la visibilidad

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
           </p>
         </div>
         <div class="contenedorImagenVideo">
-          <img class="imagenVideos" src="assets/img/imgVideos1.png">
+        <img class="imagenVideos" src="assets/img/imgVideos1.png">
+        <iframe style="visibility: hidden" class="reproductorVideo" src="https://www.youtube.com/embed/fLSmUWOYpKw" frameborder="0" allowfullscreen></iframe>
           <!-- imagen -->
         </div>
       </section>
