aztuazlizacion del master

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <ul>
         <li class="navLista">
-          <a href="#"><img src="assets/img/logo-white.png" class="logoNav" width="64px" id="imagenLogoCambio"></a></li>
+          <a href="#"><img src="assets/img/logo-pink.png" class="logoNav" width="64px" id="imagenLogoCambio"></a></li>
         <li class="navLista navFloat bordeElementoNav" id="sign">Sign up</li>
         <li class="navLista navFloat bordeElementoNav">Log in</li>
         <li class="navLista navFloat">Help</li>
@@ -85,8 +85,7 @@
           </p>
         </div>
         <div class="contenedorImagenVideo">
-        <img class="imagenVideos" src="assets/img/imgVideos1.png">
-        <iframe style="visibility: hidden" class="reproductorVideo" src="https://www.youtube.com/embed/fLSmUWOYpKw?rel=0& " frameborder="0" allowfullscreen></iframe>
+          <img class="imagenVideos" src="assets/img/imgVideos1.png">
           <!-- imagen -->
         </div>
       </section>
@@ -94,7 +93,6 @@
       <section>
         <div class="contenedorImagenVideo contenedorImagenVideo2">
           <img class="imagenVideos imagenVideos2" src="assets/img/imgVideos2.png">
-          <iframe  style="visibility:hidden" class="reproductorVideo reproductorVideo2" src="https://www.youtube.com/embed/v8nyGzOLsdw?rel=0" frameborder="0" allowfullscreen></iframe>
           <!-- imgagen -->
         </div>
         <div class="contenedorTextoVideos contenedorTextoVideos2">
@@ -117,8 +115,6 @@
         </div>
         <div class="contenedorImagenVideo">
           <img class="imagenVideos" src="assets/img/imgVideos3.png">
-          <iframe style="visibility: hidden" class="reproductorVideo"  src="https://www.youtube.com/embed/xj2VWLV0xCU?rel=0" frameborder="0" allowfullscreen></iframe>
-
           <!-- imgagen -->
         </div>
       </section>
