--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
       </div>
     </footer>
-    <script src="assets/js/nav.js"></script>
-    <script src="assets/js/videos.js"></script>
+    <script src="assets/js/nav.js/nav.js"></script>
+    <script src="assets/js/videos.js/videos.js"></script>
   </body>
 </html>
