Agregué imagen del ícono de play sobre las imágenes del video

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
           </p>
         </div>
         <div class="contenedorImagenVideo">
+          <img class="videoPlayDerecha" src="assets/img/play.png">
           <img class="imagenVideos" src="assets/img/imgVideos1.png">
           <!-- imagen -->
         </div>
@@ -92,7 +93,8 @@
 
       <section>
         <div class="contenedorImagenVideo contenedorImagenVideo2">
-          <img class="imagenVideos imagenVideos2" src="assets/img/imgVideos2.png">
+          <img class="videoPlayIzquierda" src="assets/img/play.png">
+          <img class="imagenVideos imagenVideosIzquierda" src="assets/img/imgVideos2.png">
           <!-- imgagen -->
         </div>
         <div class="contenedorTextoVideos contenedorTextoVideos2">
@@ -114,6 +116,7 @@
           </p>
         </div>
         <div class="contenedorImagenVideo">
+          <img class="videoPlayDerecha" src="assets/img/play.png">
           <img class="imagenVideos" src="assets/img/imgVideos3.png">
           <!-- imgagen -->
         </div>
