Realicé cambios finales del header, con degradado y párrafos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/footer/footer.css">
     <link rel="icon" href="assets/img/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
 
   <body>
@@ -33,11 +34,15 @@
     <header id="header">
       <div>
         <video id="video-header" src="assets/img/header-video.mp4" autoplay poster=""></video>
+        <div class="complementoFormulario">
+
+        </div>
+
         <div class="formulario-header">
           <form>
 
             <div class="PrimeraParteFormulario">
-              <h1 id="tituloForm">TURN MILES<br>INTO MONEY</h1>
+              <h1 id="tituloForm">TURN MILESINTO MONEY</h1>
               <h2 id="tituloFormDos">SING UP TO DRIVE WITH LYFT.</h2>
               <input class="inputFormulario" type="tel" name="phone" placeholder="Phone Number">
               <input class="inputFormulario inputPequeño" type="text" name="nameFirst" placeholder="First Name">
@@ -86,20 +91,25 @@
 
     </header>
 
-    <div id="seccion-header">
+    <div class="complementoFormulario">
+
+    </div>
+
+    <div id="seccion-header" >
       <div class="contenedor-Parrafos">
-        <h3>A RIDE IN<br>MINUTES</h3>
-        <p>Request a ride and you'll be on<br> you way in minutes.Request.<br>Ride.Repeat.</p>
-        <h3>SERIOUS ABOUT<br>SAFETY</h3>
+        <h3>A RIDE IN MINUTES</h3>
+        <p>Request a ride and you'll be on you way in minutes. Request. Ride. Repeat.</p>
+        <h3>SERIOUS ABOUT SAFETY</h3>
         <p>From knowing the color of your driver's car to our 24/7<br>Trust & Safety Team, we got you.</p>
-        <h3>HAPPY DRIVES.<br>HAPPY RIDERS.</h3>
-        <p>Ride with and you’ll see why 9 out of 10 rides end with five<br> stars.</p>
+        <h3>HAPPY DRIVERS.<br>HAPPY RIDERS.</h3>
+        <p class="ultimoParrafoHeader">Ride with and you’ll see why 9 out of 10 rides end with five<br> stars.</p>
       </div>
       <div class="contenedor-phone">
         <img class="fotoPhone" src="assets/img/phone.png">
       </div>
     </div>
 
+    <div><
 
     <section id="video">
       <section class="contenedorTextoImagenVideos">
