ajustes Finales Footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/footer/footer.css">
     <link rel="icon" href="assets/img/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Scada" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Scada" rel="stylesheet">
   </head>
 
   <body>
@@ -35,7 +35,7 @@
         <video id="video-header" autoplay loop >
             <source src="assets/video/hero-video.mp4" type="video/mp4">
         </video>
-        
+
         <div class="formulario-header">
           <div class="titulo-formulario">
             <h1>TURN MILES<br>INTO MONEY</h1>
@@ -161,7 +161,7 @@
          <li class="classList4"><a> <img class="imagenApp" src="assets/img/amazon.png"/></a></li>
          <li class="classList4"><a> <img class="imagenApp" src="assets/img/microsoft.png"/></a></li>
        </ul>
-       <div class="Icons">
+       <div class="icons">
           <div ><img class="iconsV Uno" src="assets/img/twitter.png"></div>
           <div ><img class="iconsV Dos"src="assets/img/facebook.png"></div>
           <div ><img class="iconsV Tres"src="assets/img/instagram.png"></div>
