Agrega video, errores en el 2 y 3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/footer/footer.css">
     <link rel="icon" href="assets/img/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Scada" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Scada" rel="stylesheet">
   </head>
 
   <body>
@@ -35,7 +35,7 @@
         <video id="video-header" autoplay loop >
             <source src="assets/video/hero-video.mp4" type="video/mp4">
         </video>
-        
+
         <div class="formulario-header">
           <div class="titulo-formulario">
             <h1>TURN MILES<br>INTO MONEY</h1>
@@ -89,6 +89,7 @@
         <div class="contenedorImagenVideo">
           <img class="videoPlayDerecha" src="assets/img/play.png">
           <img class="imagenVideos" src="assets/img/imgVideos1.png">
+          <iframe class=" play" style="visibility:hidden" src="https://www.youtube.com/embed/fLSmUWOYpKw?rel=0" frameborder="0" allowfullscreen></iframe>
           <!-- imagen -->
         </div>
       </section>
@@ -97,6 +98,8 @@
         <div class="contenedorImagenVideo contenedorImagenVideo2">
           <img class="videoPlayIzquierda" src="assets/img/play.png">
           <img class="imagenVideos imagenVideosIzquierda" src="assets/img/imgVideos2.png">
+          <iframe style="visibility:hidden" class="play"  src="https://www.youtube.com/embed/v8nyGzOLsdw?rel=0" frameborder="0" allowfullscreen></iframe>
+
           <!-- imgagen -->
         </div>
         <div class="contenedorTextoVideos contenedorTextoVideos2">
@@ -118,8 +121,10 @@
           </p>
         </div>
         <div class="contenedorImagenVideo">
-          <img class="videoPlayDerecha" src="assets/img/play.png">
+          <img class="videoPlayDerecha " src="assets/img/play.png">
           <img class="imagenVideos" src="assets/img/imgVideos3.png">
+          <iframe class="play" style="visibility:hidden" src="https://www.youtube.com/embed/xj2VWLV0xCU?rel=0" frameborder="0" allowfullscreen></iframe>
+
           <!-- imgagen -->
         </div>
       </section>
@@ -175,7 +180,7 @@
       </div>
     </footer>
     <script src="assets/js/nav.js/nav.js"></script>
-    <script src="assets/js/videos.js/videos.js"></script>
+    <script src="assets/js/videos.js/eventos.js"></script>
     <script src="assets/js/formularioOculto.js/formOculto.js"></script>
   </body>
 </html>
