--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
         <div class="contenedorImagenVideo">
           <img class="videoPlayDerecha" src="assets/img/play.png">
           <img class="imagenVideos" src="assets/img/imgVideos1.png">
-          <iframe class=" play" style="visibility:hidden" src="https://www.youtube.com/embed/fLSmUWOYpKw?rel=0" frameborder="0" allowfullscreen></iframe>
           <!-- imagen -->
         </div>
       </section>
@@ -112,8 +111,6 @@
         <div class="contenedorImagenVideo contenedorImagenVideo2">
           <img class="videoPlayIzquierda" src="assets/img/play.png">
           <img class="imagenVideos imagenVideosIzquierda" src="assets/img/imgVideos2.png">
-          <iframe style="visibility:hidden" class="play"  src="https://www.youtube.com/embed/v8nyGzOLsdw?rel=0" frameborder="0" allowfullscreen></iframe>
-
           <!-- imgagen -->
         </div>
         <div class="contenedorTextoVideos contenedorTextoVideos2">
@@ -135,10 +132,8 @@
           </p>
         </div>
         <div class="contenedorImagenVideo">
-          <img class="videoPlayDerecha " src="assets/img/play.png">
+          <img class="videoPlayDerecha" src="assets/img/play.png">
           <img class="imagenVideos" src="assets/img/imgVideos3.png">
-          <iframe class="play" style="visibility:hidden" src="https://www.youtube.com/embed/xj2VWLV0xCU?rel=0" frameborder="0" allowfullscreen></iframe>
-
           <!-- imgagen -->
         </div>
       </section>
@@ -194,7 +189,7 @@
       </div>
     </footer>
     <script src="assets/js/nav.js/nav.js"></script>
-    <script src="assets/js/videos.js/eventos.js"></script>
+    <script src="assets/js/videos.js/videos.js"></script>
     <script src="assets/js/formularioOculto.js/formOculto.js"></script>
   </body>
 </html>
