Revert "Rama modificar form"

--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
             <h2>SING UP TO DRIVE WITH LYFT.</h2>
           </div>
               <form>
-                <input class="entradaForm tel" type="tel" name="phone" placeholder="Phone Number">
+                <input class="entradaForm" type="tel" name="phone" placeholder="Phone Number">
                 <!-- Modificaciones para el formulario Oculto -->
-                  <div id="desplegar"class="display">
-                      <input class="entradaForm" type="text" name="nameFirst" placeholder="First Name">
-                      <input class="entradaForm" type="text" name="nameLast" placeholder="Last Name">
-                      <input class="entradaForm" type="mail" name="email" placeholder="Email">
-                      <input class="entradaCity" type="text" name="city" placeholder="City">
-                      <a class="promo" href="#">Promo code?</a>
-                      <div class="textoForm  ">
-                        <input type="checkbox" name="agree">
-                        <label>
-                          <span>
-                            I agree to
-                            <a class="enlace" href="#">Lyft´s Terms of Service</a>
-                          </span>
-                        </label>
-                      </div>
-                  </div>
 
+                  <input class="entradaForm display" type="text" name="nameFirst" placeholder="First Name">
+                  <input class="entradaForm display" type="text" name="nameLast" placeholder="Last Name">
+                  <input class="entradaForm display" type="mail" name="email" placeholder="Email">
+                  <input class="entradaCity  display" type="text" name="city" placeholder="City">
+                  <a class="promo  display" href="#">Promo code?</a>
+                  <div class="textoForm  display">
+                    <input class="display" type="checkbox" name="agree">
+                    <label class="display">
+                      <span class="display">
+                        I agree to
+                        <a class="enlace display" href="#">Lyft´s Terms of Service</a>
+                      </span>
+                    </label>
+
+
+                </div>
                 <div class="areaButton">
                   <button>Become a Driver</button>
                   <a class="singUp" href="#">Sign Up to Ride</a>
